--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   speech_to_text: ^5.5.0
   flutter_blue_plus: ^1.1.3
   gps_connectivity: ^0.0.4 
+  battery_plus: ^2.1.3
+  vibration: ^1.7.0
+  all_sensors: ^0.4.1
   # google_fonts: ^3.0.1
   # curved_navigation_bar: ^1.0.3
 
