--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,10 @@ dependencies:
   battery_plus: ^2.1.3
   vibration: ^1.7.0
   all_sensors: ^0.4.1
+  perfect_volume_control: ^1.0.5
+  proximity_sensor: ^1.0.2
+  light: ^2.1.0
+  path_provider: ^2.0.11
   # google_fonts: ^3.0.1
   # curved_navigation_bar: ^1.0.3
 
